--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -17,6 +17,8 @@
                 <p class="title-courses">Okres</p>
                 <p class="description-courses"><span>{{term.start_date}} - {{term.end_date}}</span></p>
             </td>
+        </tr>
+        <tr class="row">
             <td class="col-sm-5">
                 <p class="title-courses">Prowadzący</p>
                 {{#coordinators}}
@@ -41,11 +43,14 @@
             {{/if}}
             {{#if assessment_criteria}}
             <td class="col-sm-2">
-                <p class="title-courses">Krytera oceny:</p>
-                <p data-toggle="modal" data-target="#kryteria-grades" class="kryteria-grades">
-                    <!--
-                    <span>{{nl2br assessment_criteria}}</span></p>
-                    -->
+                <p class="title-courses" data-toggle="collapse" data-target="#collapseCritieria" aria-expanded="false"
+                   aria-controls="collapseCritieria">Krytera oceny:</p>
+                <div class="collapse" id="collapseCritieria">
+                    <div class="well">
+                        <p class="description-courses description-courses">
+                            <span>{{nl2br assessment_criteria}}</span></p>
+                    </div>
+                </div>
             </td>
             {{/if}}
             <td class="col-sm-4">
@@ -97,7 +102,11 @@
                 <div class="collapse" id="collapseStudents">
                     <div class="well">
                         {{#participants}}
-                        <p class="description-courses"><span>{{last_name}} {{first_name}}</span></p>
+                        <button data-toggle="modal" data-target="#lecturers-1" class="description-courses"
+                                data-lecturerId="{{user_id}}">
+                            <span>{{first_name}} {{last_name}}</span>
+                        </button>
+                        <br>
                         {{/participants}}
                     </div>
                 </div>
