--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -20,7 +20,7 @@
                 <li><a href="#tt">Plan</a></li>
                 <li><a href="#courses">Przedmioty</a></li>
                 <li><a href="#grades">Oceny</a></li>
-                <li><a href="#lecturers">Nauczyciele</a></li>
+                <li><a href="#lecturers">Wykładowcy</a></li>
                 <li><a href="#friends">Znajomi</a></li>
 
                 <li class="dropdown">
