--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -38,15 +38,17 @@
                             class="img-circle profil-nav">{{current_user['name']}} <span
                             class="glyphicon glyphicon-menu-down"></span></a>
                     <ul class="dropdown-menu">
+                        <!--
                         <li><a href="#user">Użytkownik</a></li>
                         <li><a href="#grades">Oceny</a></li>
                         <li><a href="#tt">Plan</a></li>
                         <li><a href="#courses">Przedmioty</a></li>
-                        <li><a href="#lecturers">Nauczyciele</a></li>
+                        <li><a href="#lecturers">Wykładowcy</a></li>
                         <li><a href="#terms">Cykle</a></li>
                         <li><a href="#programmes">Kierunki</a></li>
                         <li><a href="#faculties">Jednostki</a></li>
                         <li><a href="#contact">Kontakt</a></li>
+                        -->
                         <li><a href="{{API_URL}}/authentication/logout">Wyloguj</a></li>
                     </ul>
                 </li>
@@ -56,7 +58,7 @@
                 <li><a href="#grades">Oceny</a></li>
                 <li><a href="#tt">Plan</a></li>
                 <li><a href="#courses">Przedmioty</a></li>
-                <li><a href="#lecturers">Nauczyciele</a></li>
+                <li><a href="#lecturers">Wykładowcy</a></li>
                 <li><a href="#terms">Cykle</a></li>
                 <li><a href="#programmes">Kierunki</a></li>
                 <li><a href="#faculties">Jednostki</a></li>
