--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,8 +1,8 @@
 body{font-size:13px;font-family: 'Roboto', sans-serif;}
-html,body{font-family:'Roboto', sans-serif;font-weight:400;height:100%;}
+html,body{font-family:'Roboto', sans-serif;font-weight:400;}
 section{padding-bottom: 120px;min-height: 100%;}
 h2{font-weight:300;}
-.body-index{height:100%;width:100%}
+.body-index{width:100%}
 .navbar {border:none;}
 .nawigacja-app{border-bottom:1px solid #ddd;;background: white;border-radius: 0;margin: 0;height:60px;}
 .active-nav{font-weight:600 !important;}
@@ -177,7 +177,7 @@ tbody>tr:hover{background:#f7f7f7;}
 .select-year>.col-sm-4>.nice-select>ul>.option{height: 30px;line-height: 30px;min-height:30px}
 .select-year label{margin: 12px 20px;}
 .list-student{cursor:pointer;}
-
+table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {background-color: #fff;}
 #criteria-grades>.modal-dialog>.modal-content>.modal-body{padding:30px;}
 .criteria-grades{cursor:pointer;}
 
@@ -415,7 +415,7 @@ header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 .logowanie-modal>.modal-dialog>.modal-content>.modal-body>.col-sm-12>.col-sm-2>span {font-size: 14px;}
 .hr-left {padding-left: 0;}
 .hr-right {padding-right: 0;}
-
+	
 /*media*/
 @media (min-width: 769px){
 header{background: url('../img/header.png') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
@@ -436,7 +436,7 @@ header>.container>.row>.col-sm-10 {max-height: 414px;}
 .navbar-form {padding: 0px;}
 }
 
-@media (max-width:767px) {
+@media (max-width:767px) { 
 header{background: url('../img/header-mobile.jpg') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
 #wybor-uczelni>.container>.row>.col-sm-12>.form-group>input {padding: 2% 0 0 40px;    background: url(../img/search.png) no-repeat 3% 57%;}
 .navbar-landing.slide-active{position:fixed;}
@@ -502,29 +502,29 @@ body.slide-active {overflow-x: hidden;padding:0;}
 .navbar-nav>li>a {padding-top: 19px;padding-bottom: 20px;}
 #znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6{padding:0;margin-top:30px;}
 }
-
+	
 
 .first-nav-pagination>a{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}
 .last-nav-pagination>a{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}
 tr.detail-view>td{padding:15px !important;}
 tr.detail-view>td>.col-sm-12{padding:15px;}
 
-
-
+	
+	
 /*errror*/
 .error{margin-top: 50px;min-height:auto;}
-
-@media (min-width: 930px) {
+	
+@media (min-width: 1000px) {
 .navbar {
     border-radius: 4px;
   }
 }
-@media (min-width: 930px) {
+@media (min-width: 1000px) {
   .navbar-header {
     float: left;
   }
 }
-@media (min-width: 930px) {
+@media (min-width: 1000px) {
   .navbar-collapse {
     width: auto;
     border-top: 0;
@@ -547,7 +547,7 @@ tr.detail-view>td>.col-sm-12{padding:15px;}
     padding-left: 0;
   }
 }
-@media (max-width: 929px) {
+@media (max-width: 999px) {
 	.logowanie-modal>.modal-dialog>.modal-content>.modal-header>.col-sm-12>button {
     margin-top: 0px;
 }
@@ -605,7 +605,7 @@ tr.detail-view>td>.col-sm-12 {
 	text-align:center;
 }
 }
-@media (min-width: 930px){
+@media (min-width: 1000px){
 .navbar-toggle {
     display: none;
 }
@@ -616,7 +616,7 @@ tr.detail-view>td>.col-sm-12 {
     margin: 10px 10px 50px 10px;
 }
 }
-@media (max-width: 929px){
+@media (max-width: 999px){
 .navbar-toggle {
     display: block;
 }
@@ -628,31 +628,31 @@ tr.detail-view>td>.col-sm-12 {
     margin: 10px 0px 50px 0px;
 }
 }
-@media (min-width: 930px){
+@media (min-width: 100px){
 .navbar-left {
     float: left!important;
 }
 }
-@media (min-width: 930px){
+@media (min-width: 100px){
 .navbar-nav {
     float: left;
     margin: 0;
 }
 }
 
-@media (min-width: 930px){
+@media (min-width: 1000px){
 .navbar-right {
     float: right!important;
     margin-right: -15px;
 }
 }
-@media (min-width: 930px){
+@media (min-width: 1000px){
 .container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
     margin-right: 0;
     margin-left: 0;
 }
 }
-@media (min-width: 930px){
+@media (min-width: 1000px){
 	.navbar-nav>li {
     float: left;
 }
@@ -674,7 +674,7 @@ tr.detail-view>td>.col-sm-12 {
     margin-left: -15px;
 }
 }
-@media (max-width: 929px){
+@media (max-width: 999px){
 	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     margin-left: 0px;
 }
@@ -760,7 +760,7 @@ table>tbody>tr>td:last-child, table>tbody>tr>th:last-child, table>tfoot>tr>td:la
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
-@media (min-width: 930px){
+@media (min-width: 1000px){
 .dataTables_filter {
     position: relative;
     line-height: 34px;
@@ -822,7 +822,7 @@ table>tbody>tr>td:last-child, table>tbody>tr>th:last-child, table>tfoot>tr>td:la
 }
 .dataTables_paginate>.paginate_button.previous{border-radius:4px;margin-right:15px;}
 .dataTables_paginate>.paginate_button.next{border-radius:4px;margin-left:15px;}
-
+ 
 .dataTables_wrapper>div>div>table>thead>tr>th, table>thead>tr>th {
 	  cursor: pointer;
     background-position: 98%;
@@ -878,7 +878,7 @@ border-radius: 4px;}
 .heading {
     margin-bottom: 50px;
 }
-@media (min-width: 930px){
+@media (min-width: 1000px){
 #grades .dataTables_wrapper .dataTables_filter {
     position: absolute;
     left: 100px;
@@ -931,12 +931,12 @@ border-radius: 4px;}
     border-left:0;
 }
 td.details-control:before {
-	 font-family: 'Glyphicons Halflings';
+	 font-family: 'Glyphicons Halflings'; 
 	content:"\e259";
     cursor: pointer;
 }
 tr.shown td.details-control:before {
-	 font-family: 'Glyphicons Halflings';
+	 font-family: 'Glyphicons Halflings'; 
 	content:"\e260";
 }
 table.dataTable tbody td.no-padding {
@@ -946,7 +946,7 @@ table.dataTable tbody td.no-padding {
 .slider tr>td{border:none;}
 .slider tr{border:none;}
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-     border-top: 1px solid #ddd;
+     border-top: 1px solid #ddd; 
 }
 .slider{    padding: 5px 30px;}
 .slider>table>tbody>tr>td{border:none;border-top:none !important;text-align:left;}
@@ -964,7 +964,7 @@ table.dataTable.row-border tbody tr:first-child th, table.dataTable.row-border t
 table.dataTable.display tbody tr.even>.sorting_1, table.dataTable.order-column.stripe tbody tr.even>.sorting_1 {
     background-color: #fff;
 }
-@media (min-width: 768px){
+@media (min-width:1000px){
 #courses-table>tbody>tr>td:last-child {
     min-width: 77px;
 }}
@@ -1044,4 +1044,41 @@ table.dataTable.display tbody tr.even>.sorting_1, table.dataTable.order-column.s
 .content>.container>.row>.col-sm-12>p{font-size: 16px;font-weight: 400;}
 .content>.container>.row>.col-sm-12>h1>span{color: #3976ff;}*/
 
-
+/*cookies*/
+ @media (min-width: 768px){
+.cookie-message {
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  padding:0;
+  z-index: 99;
+  background-color:#2f6af0;
+  padding:3px 20% 1px 20%;
+ }}
+.cookie-message a {
+  cursor:pointer;
+  text-decoration: underline;
+}
+.cookie-message p, .cookie-message a {
+  color:#333;
+  font-size:14px ;
+}
+.cookie-message>p{margin:0;padding: 10px 0;float:left;}
+a.cookiebar-close:hover:{text-decoration:none;}
+.cookiebar-close{float:right;}
+a.cookiebar-close{text-decoration:none;}
+.blue p, .blue a { color:#fff; }
+.cookiebar-close>span{font-size:30px;}
+.bottom{bottom:0;background-color: #2f6af0;position: fixed;
+    margin: 0 auto;
+    width: 100%;
+    text-align: left;color: #fff;padding: 3px 20% 1px 20%;}
+.cb-enable{float:right;font-size:30px;}
+.cb-enable:hover{text-decoration:none;}
+.bottom>p>a{color:white;}
+.cb-policy{text-decoration: underline;}
+#cookie-bar>p{font-size:14px;}
+#cookie-bar span{float:left;padding:12px 0;}
+#cookie-bar .cb-enable{float:right;padding:0;}
+#cookie-bar .cb-policy{float:left;padding:12px 0;}
