--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -5,22 +5,22 @@
                 <p class="title-courses">Jednostka:</p>
                 <p class="description-courses"><span>{{fac_id.name}}</span></p>
             </td>
-            <td class="col-sm-4">
+            <td class="col-sm-2">
                 <p class="title-courses">Czy jest prowadzony:</p>
                 <p class="description-courses"><span>{{is_currently_conducted}}</span></p>
             </td>
             <td class="col-sm-2">
-                <p class="title-courses">Cykl</p>
+                <p class="title-courses">Cykl:</p>
                 <p class="description-courses"><span>{{term.name}}</span></p>
             </td>
             <td class="col-sm-3">
-                <p class="title-courses">Okres</p>
+                <p class="title-courses">Okres:</p>
                 <p class="description-courses"><span>{{term.start_date}} - {{term.end_date}}</span></p>
             </td>
         </tr>
         <tr class="row">
-            <td class="col-sm-5">
-                <p class="title-courses">Prowadzący</p>
+            <td class="col-sm-3">
+                <p class="title-courses">Prowadzący:</p>
                 {{#coordinators}}
                 <button data-toggle="modal" data-target="#lecturers-1" class="description-courses"
                         data-lecturerId="{{user_id}}">
@@ -30,8 +30,8 @@
                 {{/coordinators}}
             </td>
             {{#if coordinators}}
-            <td class="col-sm-6">
-                <p class="title-courses">Koordynatorzy</p>
+            <td class="col-sm-3">
+                <p class="title-courses">Koordynatorzy:</p>
                 {{#lecturers}}
                 <button data-toggle="modal" data-target="#lecturers-1" class="description-courses"
                         data-lecturerId="{{user_id}}">
@@ -44,7 +44,7 @@
             {{#if assessment_criteria}}
             <td class="col-sm-2">
                 <p class="title-courses" data-toggle="collapse" data-target="#collapseCritieria" aria-expanded="false"
-                   aria-controls="collapseCritieria">Krytera oceny:</p>
+                   aria-controls="collapseCritieria">Kryteria oceny:</p>
                 <div class="collapse" id="collapseCritieria">
                     <div class="well">
                         <p class="description-courses description-courses">
@@ -53,7 +53,7 @@
                 </div>
             </td>
             {{/if}}
-            <td class="col-sm-4">
+            <td class="col-sm-3 ">
                 <p class="title-courses">Grupy:</p>
                 {{#groups}}
         <tr>
@@ -75,19 +75,18 @@
             </td>
             {{/if}}
             {{#if description}}
-            <td class="col-sm-2">
-                <p class="title-courses" data-toggle="collapse" data-target="#collapseDescription">Opis</p>
+            <td class="col-sm-3">
+                <p class="title-courses" data-toggle="collapse" data-target="#collapseDescription">Opis:</p>
                 <div class="collapse" id="collapseDescription">
                     <div class="well">
-                        <p class="description-courses description-courses">
+                        <p class="description-courses">
                             <span>{{nl2br description}}</span></p>
                     </div>
                 </div>
-
             </td>
             {{/if}}
             {{#if bibliography}}
-            <td class="col-sm-2">
+            <td class="col-sm-3">
                 <p class="title-courses" data-toggle="collapse" data-target="#collapseBiblio">Bibliografia:</p>
                 <div class="collapse" id="collapseBiblio">
                     <div class="well">
@@ -98,7 +97,7 @@
             </td>
             {{/if}}
             <td class="col-sm-3">
-                <p class="title-courses" data-toggle="collapse" data-target="#collapseStudents">Studenci</p>
+                <p class="title-courses" data-toggle="collapse" data-target="#collapseStudents">Studenci:</p>
                 <div class="collapse" id="collapseStudents">
                     <div class="well">
                         {{#participants}}
