--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -137,14 +137,13 @@
         </div>
     </footer>
 
-    <div class="modal fade logowanie-modal in" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-         style="display: block;">
+    <div class="modal fade logowanie-modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <div class="col-sm-12">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                aria-hidden="true">×</span></button>
+                                aria-hidden="true">&times;</span></button>
                         <h3>Logowanie</h3>
                     </div>
                 </div>
@@ -155,16 +154,16 @@
                     <div class="col-sm-12 col-xs-12">
                         <a href="{{API_URL}}/authentication/facebook" type="button"
                            class="btn btn-primary btn-lg btn-block">Zaloguj się przez <span>Facebook</span></a>
-                    </div>
+                </div>
                     <div class="col-sm-12 col-xs-12">
                         <div class="col-sm-5 col-xs-5 hr-left">
-                            <hr>
+                            <hr/>
                     </div>
                         <div class="col-sm-2 col-xs-2 text-center">
                             <span>lub</span>
                     </div>
                         <div class="col-sm-5 col-xs-5 hr-right">
-                            <hr>
+                            <hr/>
                     </div>
                 </div>
                     <div class="col-sm-12 col-xs-12">
@@ -174,7 +173,6 @@
             </div>
             </div>
         </div>
-
     </div>
 
 </div>
