--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -15,7 +15,7 @@
                     </thead>
                     <tbody>
                     {{#data}}
-                    <tr class="row">
+                    <tr class="odd">
                         <td>{{course_name}}</td>
                         <td>{{course_id}}</td>
                         <td>{{term_id}}</td>
