--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -47,7 +47,7 @@
                    aria-controls="collapseCritieria">Kryteria oceny:</p>
                 <div class="collapse" id="collapseCritieria">
                     <div class="well">
-                        <p class="description-courses description-courses">
+                        <p class="description-courses">
                             <span>{{nl2br assessment_criteria}}</span></p>
                     </div>
                 </div>
@@ -93,7 +93,6 @@
                         <p class="description-courses"><span>{{nl2br bibliography}}</span></p>
                     </div>
                 </div>
-
             </td>
             {{/if}}
             <td class="col-sm-3">
