--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -15,14 +15,20 @@
 					</thead>
 					<tbody>
 					{{#data}}
-					<tr>
+					<tr class="courses-modal" data-toggle="modal" data-target="#list-student"
+						data-courseId="{{course_id}}" data-termId="{{term_id}}">
+
 						<td>{{term_id}}</td>
-						<td class="courses-modal" data-toggle="modal" data-target="#list-student"
-							data-courseId="{{course_id}}" data-termId="{{term_id}}">{{course_name}}
-						</td>
+						<td>{{course_name}}</td>
 						<td>
 							{{#grades}}
-								{{class_type}} termin: {{exam_session_number}} ocena: {{value_symbol}}<br>
+							<table class="col-sm-9" cellspacing="0" border="0">
+								<div class="row">
+									<div class="col-md-3">{{class_type}}</div>
+									<div class="col-md-3">{{exam_session_number}}</div>
+									<div class="col-md-3">{{value_symbol}}</div>
+								</div>
+							</table>
 							{{/grades}}
 						</td>
 					</tr>
