--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -306,65 +306,62 @@ th.header{cursor:pointer;}
 /*modal-modal*/
 .modal-open .modal {overflow-x: hidden;overflow-y: auto;background: rgba(0, 0, 0, 0.5);}
 
-/*Znajomi*/
-#znajomi>.container>.row>.col-sm-12>.eksport{float:right;}
-#znajomi>.container>.row>.col-sm-12>.eksport>a{border: 1px solid black;padding: 6px 20px;font-weight: 400;color: black;-webkit-transition: all 0.3s linear;   -moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
-#znajomi>.container>.row>.col-sm-12>.eksport>a:hover, #znajomi>.container>.row>.col-sm-12>.eksport>a:focus{background: #3976ff;border: 1px solid #3976ff;color: white;-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>thead>tr>th>.th-inner{padding:0 0 10px 0;color: #000;font-weight: 400;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>thead>tr>th>.th-inner>a{color:black;text-decoration:none;cursor:pointer;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container{border:none;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>tr>td{border:none;padding:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>tr:hover{background:none;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>tr:nth-child(even){padding-right:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6:nth-child(even){padding-right:0;margin-top:30px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6:nth-child(odd){padding-left:0;margin-top:30px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-3{padding-left:0;padding-right:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-8{padding-right: 0;padding-left:5px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-8>h5{margin:0 0 3px 0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-8>p{margin:0;color:#aaa;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-2{padding:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-2>p{margin: 18px 0 0 0;color:#aaa;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-2>p>.del{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6>td>.col-sm-2>p:hover>.del{color:#ff5b5b; -webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12{padding-right:30px;margin-top:30px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12:nth-child(odd){padding-left:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-3{padding-left:0;padding-right:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-8{padding-right: 0;padding-left:5px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-8>h5{margin:0 0 3px 0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-8>p{margin:0;color:#aaa;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-2{padding:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-2>p{margin: 18px 0 0 0;color:#aaa;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-2>p>.add{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-12>td>.col-sm-2>p:hover>.add{color:#3fc74a;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>.add-friends>tbody>tr{padding:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-pagination>.pagination-detail{margin-top:40px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-pagination>.pagination{margin-top:40px;}
+/*friends*/
+#friends>.container>.row>.col-sm-12>.eksport{float:right;margin:10px 0;}
+#friends>.container>.row>.col-sm-12>.eksport>a{border: 1px solid black;padding: 6px 20px;font-weight: 400;color: black;-webkit-transition: all 0.3s linear;   -moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+#friends .eksport>a:hover, #friends .eksport>a:focus{background: #3976ff;border: 1px solid #3976ff;color: white;-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+#friends th{padding:0 0 10px 0;color: #000;font-weight: 400;}
+#friends>.container>.row>.content{margin-top:110px;}
+#friends table>thead>tr>th>a{color:black;text-decoration:none;cursor:pointer;}
+#friends table{border:none;}
+#friends td{border:none;}
+#friends td{border:none;padding:0;}
+#friends tr:hover{background:none;}
+#friends .col-sm-6:nth-child(even){margin-top:30px;}
+#friends .col-sm-6:nth-child(odd){margin-top:30px;}
+#friends .col-sm-3{padding-left:0;padding-right:0;}
+#friends h5{margin:0 0 3px 0;}
+#friends p{margin:0;color:#aaa;}
+#friends .col-sm-2{padding:0;}
+#friends img{border-radius:4px;max-width:50px;max-height:50px;}
+#friends p{margin: 18px 0 0 0;color:#aaa;}
+#friends .del{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
+#friends p:hover>.del{color:#ff5b5b; -webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
+#friends .col-sm-3{padding-left:0;padding-right:0;}
+#friends .col-sm-8>h5{margin:0 0 3px 0;}
+#friends .col-sm-8>p{margin:0;color:#aaa;}
+#friends .col-sm-2{padding:0;}
+#friends .col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;}
+#friends .col-sm-2>p{margin: 18px 0 0 0;color:#aaa;}
+#friends .col-sm-2>p>.add{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
+#friends .col-sm-2>p:hover>.add{color:#3fc74a;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 
 
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>thead>tr>th>.th-inner>p{float:left;margin:0;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>thead>tr>th>.th-inner>.refresh{float:right;}
-#znajomi>.container>.row>.content>.heading{margin-bottom:50px;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8{padding-left:0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>h4{border-bottom:1px solid #eee;line-height: 3.5;margin: 0;font-size:14px;font-weight: 400;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6{margin-top:30px;padding-left: 0;padding-right: 30px;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6>.row>.col-sm-3>img{border-radius: 4px;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6>.row>.col-sm-7{padding:0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6>.row>.col-sm-7>h5{margin: 0 0 3px 0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6>.row>.col-sm-7>p{color:#8d8d8d;margin: 0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-8>.col-sm-6>.row>.col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4{padding-right:0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>h4{border-bottom:1px solid #eee;line-height: 3.5;margin:0;font-size:14px;font-weight: 400;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>h4>.refresh{float:right;margin:0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12{margin-top:30px;padding-left:0}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12>.row>.col-sm-7{padding:0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12>.row>.col-sm-7>h5{margin: 0 0 3px 0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12>.row>.col-sm-7>p{color:#8d8d8d;margin: 0;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12>.row>.col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
-#znajomi>.container>.row>.content>.col-sm-12>.row>.col-sm-4>.col-sm-12>.row>.col-sm-3>img{border-radius: 4px;}
-#znajomi>.container>.row>.col-sm-8>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>thead>tr>th{border-right:none;}
-
+#friends .col-sm-4 table>tbody>.col-sm-12{margin-top:30px;}
+#friends th>span{float:left;margin:0;}
+#friends .refresh{float:right;}
+#friends .heading{margin-bottom:50px;}
+#friends h4{border-bottom:1px solid #eee;line-height: 3.5;margin: 0;font-size:14px;font-weight: 400;}
+#friends .col-sm-6{margin-top:30px;padding-left: 0;padding-right: 30px;}
+#friends img{border-radius: 4px;}
+#friends .col-sm-7{padding:0;}
+#friends h5{margin: 0 0 3px 0;}
+#friends p{color:#8d8d8d;margin: 0;}
+#friends .col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
+#friends .col-sm-4{padding-right:0;}
+#friends .col-sm-4>h4{border-bottom:1px solid #eee;line-height: 3.5;margin:0;font-size:14px;font-weight: 400;}
+#friends .refresh{float:right;margin:0;}
+#friends .col-sm-4>.col-sm-12{margin-top:30px;padding-left:0}
+#friends .col-sm-7{padding:0;}
+#friends .col-sm-7>h5{margin: 0 0 3px 0;}
+#friends .col-sm-7>p{color:#8d8d8d;margin: 0;}
+#friends .col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
+#friends .col-sm-3>img{border-radius: 4px;}
+#friends th{border-right:none;cursor: default;}
+#friends .title-find-friends{float:left;}
+#friends .dataTables_info{margin-top:50px;}
+#friends .dataTables_length{margin-top:44px;}
+#friends .dataTables_paginate{margin-top:42px;}
 /*kontakt2*/
 .error::-webkit-input-placeholder {color:red;}
 .error:-moz-placeholder {color:red;}
@@ -514,7 +511,7 @@ body.slide-active {overflow-x: hidden;padding:0;}
 
 .navbar-header {margin-right:20px;}
 .navbar-nav>li>a {padding-top: 19px;padding-bottom: 20px;}
-#znajomi>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6{padding:0;margin-top:30px;}
+#friends>.container>.row>.table-responsive>.bootstrap-table>.fixed-table-container>.fixed-table-body>table>tbody>.col-sm-6{padding:0;margin-top:30px;}
 }
 	
 
@@ -834,8 +831,8 @@ table>tbody>tr>td:last-child, table>tbody>tr>th:last-child, table>tfoot>tr>td:la
 	 padding: 6px 14px;
     box-shadow: none;
 }
-.dataTables_paginate>.paginate_button.previous{border-radius:4px;margin-right:15px;}
-.dataTables_paginate>.paginate_button.next{border-radius:4px;margin-left:15px;}
+.dataTables_paginate>.paginate_button.previous{border-radius:4px;margin-right:15px;    padding: 6px 14px;}
+.dataTables_paginate>.paginate_button.next{border-radius:4px;margin-left:15px;    padding: 6px 14px;}
  
 .dataTables_wrapper>div>div>table>thead>tr>th, table>thead>tr>th {
 	  cursor: pointer;
