--- a/web/static/templates/friends.html
+++ b/web/static/templates/friends.html
@@ -19,8 +19,8 @@
                     </thead>
                     <tbody>
                     {{#friends}}
-                    <tr class="col-sm-6 col-xs-12">
-                        <td class="friends-btn" data-friendId="{{user_id}}">
+                    <tr class="col-sm-6 col-xs-12 btn-friends" data-friendId="{{user_id}}">
+                        <td>
                             <div class="col-sm-2 col-xs-2">
                                 <img src="/static/img/friend.png" class="img-responsive"/>
                             </div>
