--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -19,7 +19,7 @@ section>.container>.row>.content{margin-top: 110px;}
     margin: 0 auto -60px;
 }
 #footer {width: 100%;height: 60px;}
-
+.full-height{height:100% !important;}
 /*menu*/
 .dropdown-menu {position: absolute;top: 100%;left: 0;z-index: 1000;display: none;float: left;min-width: 100%;-webkit-box-shadow: -1px 0px 0px 0px #ddd;-moz-box-shadow: -1px 0px 0px 0px #ddd;box-shadow: -1px 0px 0px 0px #ddd;border: none !important;padding: 0px;font-size: 13px;text-align: left;list-style: none;background-color: #fff;-webkit-background-clip: padding-box;background-clip: padding-box;border: none;border: none;border-radius: 0px;}
 .dropdown-menu>li>a {display: block;border-bottom:1px solid #ddd;padding: 11px 20px;clear: both;font-weight: 400;line-height: 1.42857143;color: #333;white-space: nowrap;}
@@ -328,10 +328,10 @@ th.header{cursor:pointer;}
 #friends .del{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends p:hover>.del{color:#ff5b5b; -webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends .col-sm-3{padding-left:0;padding-right:0;}
-#friends .col-sm-8>h5{margin:0 0 3px 0;}
+#friends .col-sm-8>h5{margin:16px 0;}
 #friends .col-sm-8>p{margin:0;color:#aaa;}
 #friends .col-sm-2{padding:0;}
-#friends .col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;}
+#friends .col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;width: 100%;}
 #friends .col-sm-2>p{margin: 18px 0 0 0;color:#aaa;}
 #friends .col-sm-2>p>.add{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends .col-sm-2>p:hover>.add{color:#3fc74a;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
@@ -355,13 +355,15 @@ th.header{cursor:pointer;}
 #friends .col-sm-7{padding:0;}
 #friends .col-sm-7>h5{margin: 0 0 3px 0;}
 #friends .col-sm-7>p{color:#8d8d8d;margin: 0;}
-#friends .col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
+#friends .col-sm-2>p{margin:16px 0;color:#6b6b6b;}
 #friends .col-sm-3>img{border-radius: 4px;}
 #friends th{border-right:none;cursor: default;}
 #friends .title-find-friends{float:left;}
 #friends .dataTables_info{margin-top:50px;}
 #friends .dataTables_length{margin-top:44px;}
 #friends .dataTables_paginate{margin-top:42px;}
+#friends .btn-link{padding:14px 12px;}
+#friends table td[class*=col-], #friends table th[class*=col-] {float:left;}
 /*kontakt2*/
 .error::-webkit-input-placeholder {color:red;}
 .error:-moz-placeholder {color:red;}
