--- a/web/static/templates/friends.html
+++ b/web/static/templates/friends.html
@@ -41,11 +41,11 @@
                 <table id="table-find-friends" class="table add-friends" cellspacing="0" width="100%">
                     <thead>
                     <tr class="col-sm-12 col-xs-12">
-                        <th class="title-find-friends">Osoby, które możesz znać</th>
+                        <th class="title-find-friends">Możesz znasz?</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr class="col-sm-6 col-xs-12">
+                    <tr class="col-sm-12 col-xs-12">
                         <td class="col-sm-12">
                             <div class="col-sm-2 col-xs-2">
                                 <img src="/static/img/friend.png" class="img-responsive"/>
@@ -61,7 +61,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr class="col-sm-6 col-xs-12">
+                    <tr class="col-sm-12 col-xs-12">
                         <td class="col-sm-12">
                             <div class="col-sm-2 col-xs-2">
                                 <img src="/static/img/friend.png" class="img-responsive"/>
@@ -74,7 +74,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr class="col-sm-6 col-xs-12">
+                    <tr class="col-sm-12 col-xs-12">
                         <td class="col-sm-12">
                             <div class="col-sm-2 col-xs-2">
                                 <img src="/static/img/friend.png" class="img-responsive"/>
