regulamin in cookie bar

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -201,7 +201,7 @@
         declineFunction: null,
         policyButton: true,
         policyText: 'Więcej informacji',
-        policyURL: '/privacy-policy/',
+        policyURL: '/regulamin',
         autoEnable: true,
         acceptText: '×',
         acceptOnContinue: false,
@@ -215,8 +215,8 @@
         append: false,
         bottom: true,
         zindex: '100',
-        domain: 'www.example.com',
-        referrer: 'www.example.com'
+        domain: 'www.kujon.mobi',
+        referrer: 'www.kujon.mobi'
     });
 
     $(window).scroll(function() {
