fix #222 - nie da się skasować konta bez sparowania go api

--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -16,6 +16,11 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li>
+                <a class="btn btn-group" href="{{API_URL}}/authentication/archive">
+                    Skasuj konto
+                </a>
+            </li>
+            <li>
                 <a class="btn btn-group" href="{{API_URL}}/authentication/logout">
                     Wyloguj się
                 </a>
