--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -44,7 +44,7 @@
                         class="fa fa-times"></i> Skasuj konto</a></li>
 
                 <li><a href="{{API_URL}}/authentication/logout" class="login-button"><i class="fa fa-sign-out"></i>
-                    Wyloguj</a></li>
+                    Wyloguj się</a></li>
                 {{else}}
                 <li class="dropdown" href="#login">
                     <a href="{{API_URL}}/authentication/login" class="dropdown-toggle" data-toggle="dropdown"
