fix #300 web - poprawić teksty przez zalogowaniem się

--- a/web/templates/---wykladowcy.html
+++ b/web/templates/---wykladowcy.html
@@ -160,6 +160,7 @@
                         <li><a href="#">Kontakt</a></li>
                         <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
                         <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
+                        <li class="ios"><a href="#"><span class="fa fa-apple"></span></a></li>
                     </ul>
                 </div>
             </div>
