--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-sm-10 text-center col-sm-offset-1">
                     <div class="intro-header">
-                        <h1>Komunikacja studentów z profesorami <span>staje się przyjemnością</span></h1>
+                        <h1>Komunikacja studencka i dane z uczelni <span>w końcu na Twoim telefonie</span></h1>
                         <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#myModal">
                             Zaloguj
                             się
@@ -63,17 +63,16 @@
                     <div class="col-xs-12 text-center download">
                         <div class="col-xs-12 col-md-6 col-md-offset-3 text-right">
                             <div class="col-xs-6">
-                                <a href="#"><img src="/static/img/google_play.png" class=""/></a>
+                                <a href="https://play.google.com/store/apps"><img src="/static/img/google_play.png" class=""/></a>
                             </div>
                             <div class="col-xs-6 text-left">
-                                <a href="#"><img src="/static/img/app_store.png" class=""/></a>
+                                <a href="https://itunes.apple.com/pl/app/"><img src="/static/img/app_store.png" class=""/></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-12 text-center log-overview">
                         <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#myModal">Zaloguj się</a>
-                            do
-                            wersji desktopowej</p>
+                            do wersji webowej</p>
                     </div>
                 </div>
             </div>
@@ -87,30 +86,38 @@
                 </div>
                 <div class="col-sm-12 demo-col">
                     <div class="col-sm-4">
-                        <h3><i class="fa fa-users"></i>Wymiana wiedzy</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <h3><i class="fa fa-users"></i>Integracja z uczelnią</h3>
+                        <p>Kujon jest połączony z największymi uczelniami w kraju które korzytają z
+                            <a href="http://https://www.usos.edu.pl/" target="_blank">USOSa</a>. Obecnie jest ponad
+                            25 uczelni wyższych z którymi integrujemy się więc jeżeli korzystasz z USOSa na swojej
+                            uczelni - powinieneś móc korzystać z Kujona.</p>
                     </div>
                     <div class="col-sm-4">
-                        <h3><i class="fa fa-share-alt"></i>Komunikacja</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <h3><i class="fa fa-share-alt"></i>Moje dane na uczelni</h3>
+                        <p>Dzięki połączeniu Kujona z Twoją uczelnią możesz przeglądać Swój plan zajęć, oceny, informacje
+                        związane z przedmiotem warunkami zaliczenia przedmiotu czy niezbędną bibliografią. </p>
                     </div>
                     <div class="col-sm-4">
-                        <h3><i class="fa fa-briefcase"></i>Organizacja nauki</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <h3><i class="fa fa-briefcase"></i>Powiadomienia o ocenach</h3>
+                        <p>Jak twój wykładoca wystawi Ci ocenę i wpisze ją do uczelnianego systemu - od razu dostaniesz
+                        powiadomienie na komórkę o ocenie ze sprawdzianu czy egzaminu. </p>
                     </div>
                 </div>
                 <div class="col-sm-12 demo-col">
                     <div class="col-sm-4">
-                        <h3><i class="fa fa-university"></i>Największe uczelnie w Polsce</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <h3><i class="fa fa-university"></i>Katalog i wyszukiwarka </h3>
+                        <p>Dzięki dostępnym w wyszukiwarkom możesz znaleźć wszystkie osoby studiujące na uczelni,
+                        pracowników a także dane dotrzeć do danych każdego wydziału.</p>
                     </div>
                     <div class="col-sm-4">
-                        <h3><i class="glyphicon glyphicon-hand-right"></i>Aplikacja mobilna</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <h3><i class="glyphicon glyphicon-hand-right"></i>Aplikacje na Android i iOS</h3>
+                        <p>Kujon jest dostępnu poprzez WWW, ale przede wszystkim jest to aplikacje mobilna działająca
+                        na platformie Android i iOS, którą można ściągnąć ze sklepu Google Play i Apple Appstore.</p>
                     </div>
                     <div class="col-sm-4">
                         <h3><i class="fa fa-globe"></i>Portale społecznościowe</h3>
-                        <p>Duis viverra lacus at congue tempor. Nunc ac convallis enim, et commodo sem.</p>
+                        <p>Integrujemy się z Facebookiem aby dla Ciebie była dostępna wymiana informacji poprzez grupy
+                        Facebooka lub Messengera. </p>
                     </div>
                 </div>
             </div>
@@ -121,16 +128,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <p class="footer-block">Copyright 2016 by <a href="http://kujon.mobi">Kujon.mobi</a>. All rights
-                        reserved.</p>
+                    <p class="footer-block">Copyright <a href="http://kujon.mobi">Kujon.mobi</a> 2016.</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="nav navbar-nav navbar-right navbar-bottom">
-                        <li><a href="regulamin">Regulamin</a></li>
                         <li><a href="regulamin">Polityka prywatności</a></li>
                         <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
-                        <li class="fb"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li class="andr"><a href="#"><span class="fa fa-android"></span></a></li>
+                        <li class="fb"><a href="https://www.facebook.com/kujonmobi-992906237450440/" target="_blank"><span class="fa fa-facebook"></span></a></li>
+                        <li class="andr"><a href="https://play.google.com/store/apps/details?id=mobi.kujon"><span class="fa fa-android"></span></a></li>
+                        <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon"><span class="fa fa-apple"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -149,7 +155,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="col-sm-12 col-xs-12">
-                        <p>Zaloguj się za pośrednictwem jednego z poniższych portali społecznościowych.</p>
+                        <p>Logowanie tylko przy użyciu konta:</p>
                 </div>
                     <div class="col-sm-12 col-xs-12">
                         <a href="{{API_URL}}/authentication/facebook" type="button"
