--- a/web/static/templates/theses.html
+++ b/web/static/templates/theses.html
@@ -5,7 +5,7 @@
                 <div class="heading">
                     <h2>Prace</h2>
                 </div>
-                <table id="table-faculties" class="table" cellspacing="0" width="100%">
+                <table id="table-terms" class="table" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th data-sortable="true">Numer</th>
