--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -53,6 +53,7 @@
                 <li><a href="#faculties">Jednostki</a></li>
                 <li><a href="#friends">Znajomi</a></li>
                 <li><a href="#theses">Prace dyplomowe</a></li>
+                <li><a href="#search">Szukaj</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
