--- a/web/static/templates/contact.html
+++ b/web/static/templates/contact.html
@@ -23,6 +23,7 @@
                                       id="inputMessage"></textarea>
                         </div>
                     </div>
+                    <!--
                     <div class="form-group">
                         <div class="col-sm-12">
                             <p class="zalaczniki">Załącznik</p>
@@ -31,6 +32,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                     <div class="form-group">
                         <div class="col-sm-2">
                             <button id="contactSubmit" class="btn btn-primary btn-zglos-problem">Wyślij wiadomość
@@ -38,6 +40,9 @@
                         </div>
                     </div>
                 </form>
+
+                <div id="formWarning"></div>
+
             </div>
         </div>
     </div>
