--- a/web/static/templates/friends.html
+++ b/web/static/templates/friends.html
@@ -6,6 +6,7 @@
                     <h2>Znajomi</h2>
                 </div>
                 <div class="eksport">
+                    <a href="#" class="btn btn-default btn-refresh" type="submit">Odśwież</a>
                     <a href="#" class="btn btn-default btn-welcome" type="submit">Eksportuj z Facebook</a>
                 </div>
             </div>
@@ -46,7 +47,7 @@
                     </thead>
                     <tbody>
                     <tr class="col-sm-12 col-xs-12">
-                        <td class="col-sm-12">
+                        <td class="col-sm-12 col-xs-12">
                             <div class="col-sm-2 col-xs-2">
                                 <img src="/static/img/friend.png" class="img-responsive"/>
                             </div>
