--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -10,6 +10,7 @@ h2{font-weight:300;}
 .gly-ok{color:#37d93f;}
 .gly-remove{color:#f34949;}
 .during{color:#3976ff;}
+#page-content.landing-page{min-height: 100%;}
 #page-content{height: 100%;}
 section{margin-bottom:80px;}
 section>.container>.row>.content{margin-top: 110px;}
@@ -42,6 +43,9 @@ section>.container>.row>.content{margin-top: 110px;}
     color: #333;
     background-color: transparent;
 }
+
+
+
 /*spinner*/
 .loader{font-size:1.5em;padding: 16px 15px;}
 
@@ -307,9 +311,11 @@ th.header{cursor:pointer;}
 .modal-open .modal {overflow-x: hidden;overflow-y: auto;background: rgba(0, 0, 0, 0.5);}
 
 /*friends*/
+#friends>.container>.row>.col-sm-12>.eksport>.btn-refresh{border: 1px solid black;padding: 6px 20px;font-weight: 400;color: black;-webkit-transition: all 0.3s linear;   -moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+#friends .eksport>.btn-refresh:hover, #friends .eksport>.btn-refresh:focus{background: #3976ff;border: 1px solid #3976ff;color: #fff !important;-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
 #friends>.container>.row>.col-sm-12>.eksport{float:right;margin:10px 0;}
-#friends>.container>.row>.col-sm-12>.eksport>a{border: 1px solid black;padding: 6px 20px;font-weight: 400;color: black;-webkit-transition: all 0.3s linear;   -moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
-#friends .eksport>a:hover, #friends .eksport>a:focus{background: #3976ff;border: 1px solid #3976ff;color: white;-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+#friends>.container>.row>.col-sm-12>.eksport>.btn-export{border: 1px solid black;padding: 6px 20px;font-weight: 400;color: #000;-webkit-transition: all 0.3s linear;   -moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
+#friends .eksport>.btn-export:hover, #friends .eksport>.btn-export:focus{background: #3976ff;border: 1px solid #3976ff;color: #fff !important;-webkit-transition: all 0.3s linear;-moz-transition: all 0.3s linear;-ms-transition: all 0.3s linear;-o-transition: all 0.3s linear;transition: all 0.3s linear;}
 #friends th{padding:0 0 10px 0;color: #000;font-weight: 400;}
 #friends>.container>.row>.content{margin-top:110px;}
 #friends table>thead>tr>th>a{color:black;text-decoration:none;cursor:pointer;}
@@ -322,23 +328,21 @@ th.header{cursor:pointer;}
 #friends .col-sm-3{padding-left:0;padding-right:0;}
 #friends h5{margin:0 0 3px 0;}
 #friends p{margin:0;color:#aaa;}
-#friends .col-sm-2{padding:0;}
-#friends img{border-radius:4px;max-width:50px;max-height:50px;}
+#friends img{border-radius:4px;width:40px;height:auto;}
 #friends p{margin: 18px 0 0 0;color:#aaa;}
 #friends .del{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends p:hover>.del{color:#ff5b5b; -webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends .col-sm-3{padding-left:0;padding-right:0;}
-#friends .col-sm-8>h5{margin:16px 0;}
+#friends tr>td>.col-sm-8{padding:0;}
+#friends .col-sm-8>h5{margin:2px 0;}
 #friends .col-sm-8>p{margin:0;color:#aaa;}
 #friends .col-sm-2{padding:0;}
-#friends .col-sm-2>img{border-radius:4px;max-width:50px;max-height:50px;width: 100%;}
 #friends .col-sm-2>p{margin: 18px 0 0 0;color:#aaa;}
 #friends .col-sm-2>p>.add{cursor:pointer;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 #friends .col-sm-2>p:hover>.add{color:#3fc74a;-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-ms-transition: all 0.2s linear;-o-transition: all 0.2s linear;transition: all 0.2s linear;}
 
 
 #friends .col-sm-4 table>tbody>.col-sm-12{margin-top:30px;}
-#friends th>span{float:left;margin:0;}
 #friends .refresh{float:right;}
 #friends .heading{margin-bottom:50px;}
 #friends h4{border-bottom:1px solid #eee;line-height: 3.5;margin: 0;font-size:14px;font-weight: 400;}
@@ -348,22 +352,23 @@ th.header{cursor:pointer;}
 #friends h5{margin: 0 0 3px 0;}
 #friends p{color:#8d8d8d;margin: 0;}
 #friends .col-sm-2>p{margin-top: 19px;color:#6b6b6b;}
-#friends .col-sm-4{padding-right:0;}
 #friends .col-sm-4>h4{border-bottom:1px solid #eee;line-height: 3.5;margin:0;font-size:14px;font-weight: 400;}
 #friends .refresh{float:right;margin:0;}
 #friends .col-sm-4>.col-sm-12{margin-top:30px;padding-left:0}
 #friends .col-sm-7{padding:0;}
 #friends .col-sm-7>h5{margin: 0 0 3px 0;}
 #friends .col-sm-7>p{color:#8d8d8d;margin: 0;}
-#friends .col-sm-2>p{margin:16px 0;color:#6b6b6b;}
+#friends .col-sm-2>p{margin:0 0;color:#6b6b6b;}
 #friends .col-sm-3>img{border-radius: 4px;}
 #friends th{border-right:none;cursor: default;}
-#friends .title-find-friends{float:left;}
 #friends .dataTables_info{margin-top:50px;}
 #friends .dataTables_length{margin-top:44px;}
 #friends .dataTables_paginate{margin-top:42px;}
 #friends .btn-link{padding:14px 12px;}
 #friends table td[class*=col-], #friends table th[class*=col-] {float:left;}
+#table-find-friends tr{padding:0;}
+
+@media (min-width: 900px){#friends .row>.col-sm-4{padding-right:0;padding-left:30px;}}
 /*kontakt2*/
 .error::-webkit-input-placeholder {color:red;}
 .error:-moz-placeholder {color:red;}
@@ -389,8 +394,20 @@ th.header{cursor:pointer;}
 .log:hover {background: #3976FF;color: white;border: 1px solid #3976FF;transition: All 0.2s linear;-webkit-transition: All 0.2s linear;-moz-transition: All 0.2s linear;-o-transition: All 0.2s linear;}
 
 /*header-landing*/
+@media (max-width: 1200px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:604px;}#pomoc {padding-bottom: 50px;padding-top: 140px;}.landing-page>#demo{padding:70px 0 90px 0;}
+}
+@media (max-width: 1000px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 604px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 80px;}.landing-page footer .nav{margin-left:-15px;}}
+@media (max-width: 991px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 511px;}.landing-page>#demo{padding:0px 0 20px 0;}} 
+@media (max-width:766px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 583px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 60px;}.landing-page>#demo{padding:0px 0 0px 0;}.landing-page footer .nav{margin-left:-10px;}}
+@media (max-width:700px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:548px;}#pomoc {padding-bottom: 50px;padding-top: 125px;margin-bottom: 50px;}}
+@media (max-width:650px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:522px;}#pomoc {padding-bottom: 50px;padding-top: 100px;margin-bottom: 40px;}}
+@media (max-width:500px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:490px;}}
+@media (max-width:450px){header>.container>.row>.col-sm-10 {margin-top: 70px;max-height:460px;}}
+ @media (min-width: 1201px){
 header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
-
+#pomoc {padding-bottom: 50px;padding-top: 170px;}
+ }
+ 
 .intro-header {margin: 40px auto 30px auto;width: 100%;}
 .intro-header>h1 {width: 100%;color: white;font-size: 32px;line-height: 1.3;font-weight: 400;}
 .white {background: white;padding: 8px 40px;color: black;border: none;font-size: 16px;margin-top: 10px;transition: All 0.2s linear;-webkit-transition: All 0.2s linear;-moz-transition: All 0.2s linear;-o-transition: All 0.2s linear;}
@@ -409,7 +426,7 @@ header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 #demo>.container>.row>.demo-col {padding-top: 50px;padding-left: 0;padding-right: 0;}
 #demo>.container>.row>.demo-col>.col-sm-4>h3 {margin-bottom: 20px;font-size: 16px;font-weight:400;}
 #demo>.container>.row>.demo-col>.col-sm-4>p {font-size: 14px;line-height: 22px;}
-.landing-page>#demo{border-bottom:none;padding:70px 0 130px 0;}
+.landing-page>#demo{border-bottom:none;}
 .demo-col>.col-sm-4>h3>.fa {padding: 0 20px 0 10px;color: #3976FF;}
 .demo-col>.col-sm-4>h3>.glyphicon {padding: 0 20px 0 10px;color: #3976FF;}
 .landing-page>footer{border-top: 1px solid #ccc;}
@@ -430,21 +447,15 @@ header>.container>.row>.col-sm-10 {margin-top: 70px;max-height: 685px;}
 .hr-right {padding-right: 0;}
 	
 /*media*/
-@media (min-width: 769px){
+@media (min-width: 768px){
 header{background: url('../img/header.png') no-repeat;width:100%;background-size: cover;background-position-x: center;background-position-y: center;}
 /*.modal-header .close {margin-top: 18px;}*/
-#pomoc {padding-bottom: 50px;padding-top: 170px;}
 .intro-header>h1>span {display: block;}
 .logowanie-modal>.modal-dialog {width: 350px;}
 
 #kontakt>.container>.row>.col-sm-12>p>span{display:block;}
 }
-@media (max-width: 400px){
-header>.container>.row>.col-sm-10 {max-height: 360px;}
-}
-@media (max-width: 500px){
-header>.container>.row>.col-sm-10 {max-height: 414px;}
-}
+
 @media (max-width: 560px){
 .navbar-form {padding: 0px;}
 }
@@ -456,7 +467,6 @@ header{background: url('../img/header-mobile.jpg') no-repeat;width:100%;backgrou
 .slide-active{position:relative;}
 .slide-active>section>.container>.row>.heading{padding-top:50px !important;}
 .slide-active>section>.container>.row>.col-sm-12{margin-top:50px !important;}
-.landing-page>#demo {border-bottom: none;padding: 30px 0 100px 0;}
 .navbar-landing>.container>#slidemenu>.nav>li>a {font-size: 18px;padding: 19px 20px;}
 .navbar-landing>.container>.slide-active>ul>li:first-child {border-bottom: 1px solid #444;}
 button.btn.btn-group.log.logowanie {padding: 0;border: none;padding: 17px 20px;margin: 0;font-size: 18px;}
@@ -491,7 +501,7 @@ body.slide-active {overflow-x: hidden;padding:0;}
 
 .slide-active>.nav>.dropdown>ul>li>a{padding:15px 15px;}
 .navbar-landing>.container>.navbar-header{margin: 0 15px;}
-.navbar-landing>.container>.navbar-header>button>span{background:white;}
+
 .slide-active.navbar-landing>.container>#slidemenu>ul>li:last-child{display:none;}
 .navbar-landing>.container>#slidemenu>ul>li:last-child{display:none;}
 .navbar-landing>.container>.navbar-header>a{padding:15px 0;}
@@ -563,7 +573,10 @@ tr.detail-view>td>.col-sm-12{padding:15px;}
 @media (max-width: 999px) {
 	.logowanie-modal>.modal-dialog>.modal-content>.modal-header>.col-sm-12>button {
     margin-top: 0px;
+	
 }
+
+.navbar-landing>.container>.navbar-header>button>span{background:white;}
 tr.detail-view>td>.col-sm-12 {
     padding: 0 15px 0 15px;
 }
@@ -688,6 +701,7 @@ tr.detail-view>td>.col-sm-12 {
 }
 }
 @media (max-width: 999px){
+	#slide-nav.navbar-landing>.container {width:100%;}
 	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     margin-left: 0px;
 }
@@ -713,6 +727,7 @@ tr.detail-view>td>.col-sm-12 {
     color: white;
     font-size: 15px;
 }
+
 .navbar-default .navbar-nav>li>a {
     color: white !important;
     font-size: 15px;
